fixed an overflowing over 2 divs

--- a/App/style.css
+++ b/App/style.css
@@ -140,12 +140,6 @@ a {
   margin-top: 1em;
 }
 
-@media (max-width: 768px) {
-  .cars-preview {
-    grid-template-columns: auto;
-  }
-}
-
 /* Products preview */
 
 /* Details  */
@@ -163,6 +157,7 @@ a {
 /* Details  */
 
 /* Products */
+
 .products-list {
   width: 100vw;
   height: 100vh;
